Fix table overflow

--- a/src/css/component/_league_table.scss
+++ b/src/css/component/_league_table.scss
@@ -84,7 +84,7 @@
   }
 
   td:first-child {
-    max-width: 140px;
+    max-width: 160px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
